lazygit config updated

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,6 +1,6 @@
 os:
   editPreset: "nvim"
 git:
-  paging:
-    colorArg: always
-    pager: diff-so-fancy
+  pagers:
+    - colorArg: always
+      pager: diff-so-fancy
